Fix styling bugs
Fix too wide side margins in gallery block on small screens.

Fix too tall top margin on ImageText block on small screens.

Fix chat bubbles rendering too narrow on desktop safari.

--- a/styles/pages/Project.module.scss
+++ b/styles/pages/Project.module.scss
@@ -30,6 +30,10 @@
 
         &:nth-child(4) {
             margin: 0 111px 0 111px;
+
+            @include mq-below(mid-large) {
+                margin: 0;
+            }
         }
     }
 }
